--- a/branches/SQUID_2_5/errors/Makefile.in
+++ b/branches/SQUID_2_5/errors/Makefile.in
@@ -127,6 +127,7 @@ DEFAULT_ERROR_DIR = $(errordir)
 
 INSTALL_LANGUAGES = @ERR_LANGUAGES@
 LANGUAGES = \
+		Azerbaijani \
 		Bulgarian \
 		Catalan \
 		Czech \
