--- a/configure.in
+++ b/configure.in
@@ -1844,7 +1844,8 @@ dnl Check for libdb
 DBLIB=
 dnl 1.85
 AC_CACHE_CHECK(if dbopen needs -ldb,ac_cv_dbopen_libdb, [
-  AC_TRY_COMPILE([
+SAVED_LIBS="$LIBS"; LIBS="$LIBS -ldb"
+  AC_TRY_LINK([
 #if HAVE_SYS_TYPES_H
 #include <sys/types.h>
 #endif
@@ -1857,10 +1858,13 @@ AC_CACHE_CHECK(if dbopen needs -ldb,ac_cv_dbopen_libdb, [
 #include <db.h>
 #endif],
     [dbopen((void *)0L, 0, 0, DB_HASH, (void *)0L)],
-    LIB_DB="-ldb"
     ac_cv_dbopen_libdb="yes",
     ac_cv_dbopen_libdb="no")
+LIBS="$SAVED_LIBS"
 ])
+if test ac_cv_dbopen_libdb = yes; then
+    LIB_DB="-ldb"
+fi
 AC_SUBST(LIB_DB)
 
 dnl System-specific library modifications
