--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -1862,7 +1862,7 @@ SAVED_LIBS="$LIBS"; LIBS="$LIBS -ldb"
     ac_cv_dbopen_libdb="no")
 LIBS="$SAVED_LIBS"
 ])
-if test ac_cv_dbopen_libdb = yes; then
+if test $ac_cv_dbopen_libdb = yes; then
     LIB_DB="-ldb"
 fi
 AC_SUBST(LIB_DB)
