--- a/trunk/src/fs/Makefile.in
+++ b/trunk/src/fs/Makefile.in
@@ -275,7 +275,7 @@ EXTRA_DIST = \
 	coss/coss-notes.txt
 
 INCLUDES = -I. -I$(top_builddir)/include -I$(top_srcdir)/include \
-	-I$(top_srcdir)/src/
+	-I$(top_srcdir)/src
 
 all: all-recursive
 
