--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -2844,6 +2844,7 @@ AC_OUTPUT([\
 	helpers/basic_auth/SMB/Makefile \
 	helpers/basic_auth/YP/Makefile \
 	helpers/basic_auth/getpwnam/Makefile \
+	helpers/basic_auth/mswin_sspi/Makefile \
 	helpers/basic_auth/multi-domain-NTLM/Makefile \
 	helpers/basic_auth/SASL/Makefile \
 	helpers/digest_auth/Makefile \
@@ -2851,13 +2852,16 @@ AC_OUTPUT([\
 	helpers/digest_auth/ldap/Makefile \
 	helpers/ntlm_auth/Makefile \
 	helpers/ntlm_auth/fakeauth/Makefile \
+	helpers/ntlm_auth/mswin_sspi/Makefile \
 	helpers/ntlm_auth/no_check/Makefile \
 	helpers/ntlm_auth/SMB/Makefile \
 	helpers/ntlm_auth/SMB/smbval/Makefile \
 	helpers/negotiate_auth/Makefile \
+	helpers/negotiate_auth/mswin_sspi/Makefile \
 	helpers/external_acl/Makefile \
 	helpers/external_acl/ip_user/Makefile \
 	helpers/external_acl/ldap_group/Makefile \
+	helpers/external_acl/mswin_lm_group/Makefile \
 	helpers/external_acl/session/Makefile \
 	helpers/external_acl/unix_group/Makefile \
 	helpers/external_acl/wbinfo_group/Makefile \
